--- a/src/index.html
+++ b/src/index.html
@@ -1,54 +1,22 @@
-<nav>
-<div class = "nav_container">
-    <div class = "logo">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
 
-    </div>
-    <div class = "login">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    </div>
-    <div class = "signup">
+    <title>Groupomania</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-    </div>
-    <div class ="profile">
-
-    </div>
-</div>
-</nav>
-
-<main>
-    <body>
-        <div class = "page_container">
-<div class = "post_container">
-    <div class = "user_name">
-
-    </div>
-    <div class = "user_pic">
-
-    </div>
-<div class = "txt_box_container">
-    <div class = "txt_box">
-
-    </div>
-</div>
-    <div class = "coments">
-
-    </div>
-    <div class = "likes">
-
-    </div>
-    <div class = "dislikes">
-
-    </div>
-    <div class = "delete">
-
-    </div>
-
-</div>
-        </div>
-        
-    </body>
-</main>
-
-<footer>
-
-</footer>
+  </body>
+</html>
