--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
     <title>Groupomania</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="body-container">
     <div id="root"></div>
-
+  </div>
   </body>
 </html>
